Fix company list alignment issues for good
Seems like Richard's fix didn't really do the trick - but the ultimate
culprit was companyShortInfo setting margin auto on itself.

While I had to fix the alignment of the featured company screen as a
result of this anyway, I got it closer to the design.

--- a/features/polyExplorer/src/components/companyList/companyList.css
+++ b/features/polyExplorer/src/components/companyList/companyList.css
@@ -94,15 +94,15 @@ button::after {
 .company-group {
     display: flex;
     position: relative;
-    margin-left: 12px;
     width: 400px;
     margin: 0 auto;
-    padding-left: 20px;
+    padding-left: 28px;
 }
 
 .company-group-label {
     position: absolute;
     top: 12px;
+    left: 16px;
     z-index: 1;
     font-family: "Jost Medium";
     font-size: 16px;
