--- a/features/polyExplorer/src/components/companyShortInfo/companyShortInfo.css
+++ b/features/polyExplorer/src/components/companyShortInfo/companyShortInfo.css
@@ -7,7 +7,7 @@
     border: none;
     background-color: #0f1938;
     outline: none;
-    margin: 0 auto;
+    margin: 0;
 }
 
 .company-short-info .featured-indicator {
